# duneuro_tdcs_test

./: CMakeLists.txt  config.h.cmake  dune.module  duneuro_tdcs_test.pc.in
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/duneuro_tdcs_test/: CMakeLists.txt  duneuro_tdcs_test.hh
src/: CMakeLists.txt  duneuro_tdcs_fitted_test.cc  duneuro_tdcs_test.cc  duneuro_tdcs_unfitted_test.cc
src/input/: configs.ini  electrodes.txt  fitted_configs.ini  unfitted_configs.ini
